--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "react-app-rewired": "*",
     "react-scripts": "*",
     "sass": "*",
