--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # B2C Configuration
-REACT_APP_B2C_clientId=clientId
-REACT_APP_B2C_authorityDomain=url
+REACT_APP_B2C_clientId=0041b1eb-5c7e-4752-a849-e75e0e16681a
+REACT_APP_B2C_authorityDomain=https://andreanib2cdev.b2clogin.com/andreanib2cdev.onmicrosoft.com/
 REACT_APP_MFE_REMOTE=remote@http://localhost:3001/remoteEntry.js
