--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "react-app-rewired": "*",
     "react-scripts": "*",
     "sass": "*",
