--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@architecture-it/eslint-config-andreani": "*",
+    "@architecture-it/eslint-config-andreani": "^1.1.0",
     "@architecture-it/react-env": "*",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
@@ -68,8 +68,6 @@
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
     "react-app-rewired": "*",
     "react-scripts": "*",
     "sass": "*",
