--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@architecture-it/cra-template-shell": "1.0.1",
     "@architecture-it/stylesystem": "^2.5.0",
+    "@azure/msal": "^1.4.5",
     "@azure/msal-browser": "^2.28.1",
     "@azure/msal-react": "^1.4.5",
     "@emotion/react": "^11.10.4",
