--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@architecture-it/eslint-config-andreani": "^1.1.0",
     "@architecture-it/react-env": "*",
+    "@architecture-it/microfront-utils": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/pro-light-svg-icons": "^6.2.0",
