--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@architecture-it/cra-template-shell": "1.0.1",
-    "@architecture-it/stylesystem": "^2.5.0",
-    "@azure/msal-browser": "^2.28.1",
-    "@azure/msal-react": "^1.4.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@architecture-it/microfront-utils": "^1.0.0",
+    "@architecture-it/stylesystem": "^2.3.0",
+    "@azure/msal-browser": "^2.26.0",
+    "@azure/msal-react": "^1.4.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/pro-light-svg-icons": "^6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
@@ -54,27 +59,22 @@
     ]
   },
   "devDependencies": {
-    "@architecture-it/eslint-config-andreani": "^1.1.0",
-    "@architecture-it/react-env": "*",
-    "@architecture-it/microfront-utils": "^1.0.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/pro-light-svg-icons": "^6.2.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.2.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@architecture-it/eslint-config-andreani": "^1.0.1",
+    "@architecture-it/react-env": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "react-app-rewired": "*",
-    "react-scripts": "*",
-    "sass": "*",
-    "stylelint": "*",
-    "stylelint-config-standard": "*",
-    "stylelint-config-standard-scss": "*",
+    "cross-env": "^7.0.3",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "5.0.1",
+    "runtime-env-cra": "^0.2.4",
+    "sass": "^1.53.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
