--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "cross-env": "^7.0.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
     "runtime-env-cra": "^0.2.4",
